--- a/block-BHaacx/index.html
+++ b/block-BHaacx/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=width, initial-scale=scale">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/media/spreadsheet/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,10 @@
 <body>
     <header class="container flex">
         <a href="#">Stimulus</a>
+        <input type="checkbox" name="toggle" id="toggle">
+        <label for="toggle">
+            <i class="fas fa-bars"></i>
+        </label>
         <nav>
             <ul class="flex">
                 <li><a class="accented" href="#">HOME</a></li>
