--- a/block-BHaacw/index.html
+++ b/block-BHaacw/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=width, initial-scale=scale">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/spreadsheet/style.css">
     <title>title</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
