fixed issue and final commit

--- a/block-BHaacx/index.html
+++ b/block-BHaacx/index.html
@@ -178,12 +178,15 @@
                 <i class="fa-solid fa-earth-americas"></i><a href="https://www.company.co">company.co</a>
             </address>
         </article>
-        <article class="map padding">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10500.12345167699!2d2.288684603483565!3d48.857621865062704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1661060916838!5m2!1sen!2sin"
-                height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+        <article class=" map padding">
+            <div class=" map-container">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10500.12345167699!2d2.288684603483565!3d48.857621865062704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1661060916838!5m2!1sen!2sin"
+                    height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+
         </article>
     </main>
     <footer class=" container">
